--- a/ML_model/sms_spam_classifier_mxnet.ipynb
+++ b/ML_model/sms_spam_classifier_mxnet.ipynb
@@ -60,7 +60,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  198k  100  198k    0     0   309k      0 --:--:-- --:--:-- --:--:--  308k\n",
+      "100  198k  100  198k    0     0   384k      0 --:--:-- --:--:-- --:--:--  384k\n",
       "Archive:  dataset/smsspamcollection.zip\n",
       "  inflating: dataset/SMSSpamCollection  \n",
       "  inflating: dataset/readme          \n",
@@ -393,77 +393,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-04-13 03:08:50 Starting - Starting the training job...\n",
-      "2022-04-13 03:09:14 Starting - Preparing the instances for trainingProfilerReport-1649819330: InProgress\n",
-      "......\n",
-      "2022-04-13 03:10:18 Downloading - Downloading input data...\n",
-      "2022-04-13 03:10:39 Training - Training image download completed. Training in progress.\u001b[34m2022-04-13 03:10:41,019 INFO - root - running container entrypoint\u001b[0m\n",
-      "\u001b[34m2022-04-13 03:10:41,020 INFO - root - starting train task\u001b[0m\n",
-      "\u001b[34m2022-04-13 03:10:41,024 INFO - container_support.training - Training starting\u001b[0m\n",
-      "\u001b[34m2022-04-13 03:10:41,866 WARNING - mxnet_container.train - #033[1;33mThis required structure for training scripts will be deprecated with the next major release of MXNet images. The train() function will no longer be required; instead the training script must be able to be run as a standalone script. For more information, see https://github.com/aws/sagemaker-python-sdk/tree/master/src/sagemaker/mxnet#updating-your-mxnet-training-script.#033[1;0m\u001b[0m\n",
-      "\u001b[34m2022-04-13 03:10:41,873 INFO - mxnet_container.train - MXNetTrainingEnvironment: {'available_cpus': 8, 'output_dir': '/opt/ml/output', 'output_data_dir': '/opt/ml/output/data/', '_scheduler_host': 'algo-1', 'resource_config': {'hosts': ['algo-1'], 'instance_groups': [{'instance_group_name': 'homogeneousCluster', 'instance_type': 'ml.c5.2xlarge', 'hosts': ['algo-1']}], 'network_interface_name': 'eth0', 'current_instance_type': 'ml.c5.2xlarge', 'current_host': 'algo-1', 'current_group_name': 'homogeneousCluster'}, 'model_dir': '/opt/ml/model', 'user_script_archive': 's3://smlambda-workshop-ccbd22/sms-spam-classifier/code/sms-spam-classifier-mxnet-2022-04-13-03-08-50-374/source/sourcedir.tar.gz', 'user_script_name': 'sms_spam_classifier_mxnet_script.py', 'hosts': ['algo-1'], '_ps_verbose': 0, '_scheduler_ip': '10.2.103.127', 'channels': {'train': {'TrainingInputMode': 'File', 'S3DistributionType': 'FullyReplicated', 'RecordWrapperType': 'None'}, 'val': {'TrainingInputMode': 'File', 'S3DistributionType': 'FullyReplicated', 'RecordWrapperType': 'None'}}, 'sagemaker_region': 'us-east-1', 'user_requirements_file': None, '_ps_port': 8000, 'available_gpus': 0, 'channel_dirs': {'train': '/opt/ml/input/data/train', 'val': '/opt/ml/input/data/val'}, 'base_dir': '/opt/ml', 'code_dir': '/opt/ml/code', 'enable_cloudwatch_metrics': False, 'container_log_level': 20, 'input_config_dir': '/opt/ml/input/config', 'hyperparameters': {'batch_size': 100, 'epochs': 20, 'sagemaker_program': 'sms_spam_classifier_mxnet_script.py', 'sagemaker_submit_directory': 's3://smlambda-workshop-ccbd22/sms-spam-classifier/code/sms-spam-classifier-mxnet-2022-04-13-03-08-50-374/source/sourcedir.tar.gz', 'learning_rate': 0.01, 'sagemaker_job_name': 'sms-spam-classifier-mxnet-2022-04-13-03-08-50-374', 'sagemaker_container_log_level': 20, 'sagemaker_region': 'us-east-1'}, 'job_name': 'sms-spam-classifier-mxnet-2022-04-13-03-08-50-374', 'current_host': 'algo-1', 'input_dir': '/opt/ml/input'}\u001b[0m\n",
-      "\u001b[34mDownloading s3://smlambda-workshop-ccbd22/sms-spam-classifier/code/sms-spam-classifier-mxnet-2022-04-13-03-08-50-374/source/sourcedir.tar.gz to /tmp/script.tar.gz\u001b[0m\n",
-      "\u001b[34m2022-04-13 03:10:42,110 INFO - mxnet_container.train - Starting distributed training task\u001b[0m\n",
-      "\u001b[34mCollecting pandas\n",
-      "  Downloading https://files.pythonhosted.org/packages/74/24/0cdbf8907e1e3bc5a8da03345c23cbed7044330bb8f73bb12e711a640a00/pandas-0.24.2-cp35-cp35m-manylinux1_x86_64.whl (10.0MB)\u001b[0m\n",
-      "\u001b[34mRequirement already satisfied: python-dateutil>=2.5.0 in /usr/local/lib/python3.5/dist-packages (from pandas) (2.7.4)\u001b[0m\n",
-      "\u001b[34mCollecting pytz>=2011k (from pandas)\n",
-      "  Downloading https://files.pythonhosted.org/packages/60/2e/dec1cc18c51b8df33c7c4d0a321b084cf38e1733b98f9d15018880fb4970/pytz-2022.1-py2.py3-none-any.whl (503kB)\u001b[0m\n",
-      "\u001b[34mRequirement already satisfied: numpy>=1.12.0 in /usr/local/lib/python3.5/dist-packages (from pandas) (1.14.6)\u001b[0m\n",
-      "\u001b[34mRequirement already satisfied: six>=1.5 in /usr/local/lib/python3.5/dist-packages (from python-dateutil>=2.5.0->pandas) (1.11.0)\u001b[0m\n",
-      "\u001b[34mInstalling collected packages: pytz, pandas\u001b[0m\n",
-      "\u001b[34mSuccessfully installed pandas-0.24.2 pytz-2022.1\u001b[0m\n",
-      "\u001b[34mYou are using pip version 18.1, however version 20.3.4 is available.\u001b[0m\n",
-      "\u001b[34mYou should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "\u001b[34m/usr/local/lib/python3.5/dist-packages/mxnet_container/train.py:190: DeprecationWarning: inspect.getargspec() is deprecated, use inspect.signature() instead\n",
-      "  train_args = inspect.getargspec(user_module.train)\u001b[0m\n",
-      "\u001b[34mTrain data path: /opt/ml/input/data/train\u001b[0m\n",
-      "\u001b[34mValidation data path: /opt/ml/input/data/val\u001b[0m\n",
-      "\u001b[34m[Epoch 0] Training: accuracy=0.731434\u001b[0m\n",
-      "\u001b[34m[Epoch 0] Validation: accuracy=0.770889\u001b[0m\n",
-      "\u001b[34m[Epoch 1] Training: accuracy=0.805923\u001b[0m\n",
-      "\u001b[34m[Epoch 1] Validation: accuracy=0.840970\u001b[0m\n",
-      "\u001b[34m[Epoch 2] Training: accuracy=0.853938\u001b[0m\n",
-      "\u001b[34m[Epoch 2] Validation: accuracy=0.843666\u001b[0m\n",
-      "\u001b[34m[Epoch 3] Training: accuracy=0.879964\u001b[0m\n",
-      "\u001b[34m[Epoch 3] Validation: accuracy=0.864331\u001b[0m\n",
-      "\u001b[34m[Epoch 4] Training: accuracy=0.890509\u001b[0m\n",
-      "\u001b[34m[Epoch 4] Validation: accuracy=0.878706\u001b[0m\n",
-      "\u001b[34m[Epoch 5] Training: accuracy=0.903298\u001b[0m\n",
-      "\u001b[34m[Epoch 5] Validation: accuracy=0.893082\u001b[0m\n",
-      "\u001b[34m[Epoch 6] Training: accuracy=0.910702\u001b[0m\n",
-      "\u001b[34m[Epoch 6] Validation: accuracy=0.903863\u001b[0m\n",
-      "\u001b[34m[Epoch 7] Training: accuracy=0.918555\u001b[0m\n",
-      "\u001b[34m[Epoch 7] Validation: accuracy=0.902066\u001b[0m\n",
-      "\u001b[34m[Epoch 8] Training: accuracy=0.919677\u001b[0m\n",
-      "\u001b[34m[Epoch 8] Validation: accuracy=0.902965\u001b[0m\n",
-      "\u001b[34m[Epoch 9] Training: accuracy=0.925510\u001b[0m\n",
-      "\u001b[34m[Epoch 9] Validation: accuracy=0.908356\u001b[0m\n",
-      "\u001b[34m[Epoch 10] Training: accuracy=0.929325\u001b[0m\n",
-      "\u001b[34m[Epoch 10] Validation: accuracy=0.920036\u001b[0m\n",
-      "\u001b[34m[Epoch 11] Training: accuracy=0.931120\u001b[0m\n",
-      "\u001b[34m[Epoch 11] Validation: accuracy=0.913747\u001b[0m\n",
-      "\u001b[34m[Epoch 12] Training: accuracy=0.932017\u001b[0m\n",
-      "\u001b[34m[Epoch 12] Validation: accuracy=0.924528\u001b[0m\n",
-      "\u001b[34m[Epoch 13] Training: accuracy=0.936280\u001b[0m\n",
-      "\u001b[34m[Epoch 13] Validation: accuracy=0.925427\u001b[0m\n",
-      "\u001b[34m[Epoch 14] Training: accuracy=0.937626\u001b[0m\n",
-      "\u001b[34m[Epoch 14] Validation: accuracy=0.925427\u001b[0m\n",
-      "\u001b[34m[Epoch 15] Training: accuracy=0.940543\u001b[0m\n",
-      "\u001b[34m[Epoch 15] Validation: accuracy=0.928122\u001b[0m\n",
-      "\u001b[34m[Epoch 16] Training: accuracy=0.941665\u001b[0m\n",
-      "\u001b[34m[Epoch 16] Validation: accuracy=0.929919\u001b[0m\n",
-      "\u001b[34m[Epoch 17] Training: accuracy=0.941665\u001b[0m\n",
-      "\u001b[34m[Epoch 17] Validation: accuracy=0.929021\u001b[0m\n",
-      "\u001b[34m[Epoch 18] Training: accuracy=0.941889\u001b[0m\n",
-      "\u001b[34m[Epoch 18] Validation: accuracy=0.930818\u001b[0m\n",
-      "\u001b[34m[Epoch 19] Training: accuracy=0.944806\u001b[0m\n",
-      "\u001b[34m[Epoch 19] Validation: accuracy=0.933513\u001b[0m\n",
+      "2022-04-14 15:28:01 Starting - Starting the training job...\n",
+      "2022-04-14 15:28:30 Starting - Preparing the instances for trainingProfilerReport-1649950081: InProgress\n",
+      ".........\n",
+      "2022-04-14 15:29:55 Downloading - Downloading input data.....\u001B[34m2022-04-14 15:30:37,984 INFO - root - running container entrypoint\u001B[0m\n",
+      "\u001B[34m2022-04-14 15:30:37,985 INFO - root - starting train task\u001B[0m\n",
+      "\u001B[34m2022-04-14 15:30:37,989 INFO - container_support.training - Training starting\u001B[0m\n",
+      "\u001B[34m2022-04-14 15:30:39,180 WARNING - mxnet_container.train - #033[1;33mThis required structure for training scripts will be deprecated with the next major release of MXNet images. The train() function will no longer be required; instead the training script must be able to be run as a standalone script. For more information, see https://github.com/aws/sagemaker-python-sdk/tree/master/src/sagemaker/mxnet#updating-your-mxnet-training-script.#033[1;0m\u001B[0m\n",
+      "\u001B[34m2022-04-14 15:30:39,190 INFO - mxnet_container.train - MXNetTrainingEnvironment: {'container_log_level': 20, 'resource_config': {'current_instance_type': 'ml.m4.xlarge', 'instance_groups': [{'instance_type': 'ml.m4.xlarge', 'instance_group_name': 'homogeneousCluster', 'hosts': ['algo-1']}], 'hosts': ['algo-1'], 'current_group_name': 'homogeneousCluster', 'network_interface_name': 'eth0', 'current_host': 'algo-1'}, 'user_script_archive': 's3://smlambda-workshop-ccbd22/sms-spam-classifier/code/sms-spam-classifier-mxnet-2022-04-14-15-28-01-172/source/sourcedir.tar.gz', '_ps_verbose': 0, 'model_dir': '/opt/ml/model', 'sagemaker_region': 'us-east-1', '_scheduler_host': 'algo-1', 'current_host': 'algo-1', '_ps_port': 8000, 'base_dir': '/opt/ml', 'hosts': ['algo-1'], 'output_dir': '/opt/ml/output', 'enable_cloudwatch_metrics': False, 'available_cpus': 4, '_scheduler_ip': '10.0.128.63', 'hyperparameters': {'sagemaker_container_log_level': 20, 'learning_rate': 0.01, 'sagemaker_program': 'sms_spam_classifier_mxnet_script.py', 'epochs': 20, 'sagemaker_job_name': 'sms-spam-classifier-mxnet-2022-04-14-15-28-01-172', 'sagemaker_submit_directory': 's3://smlambda-workshop-ccbd22/sms-spam-classifier/code/sms-spam-classifier-mxnet-2022-04-14-15-28-01-172/source/sourcedir.tar.gz', 'batch_size': 100, 'sagemaker_region': 'us-east-1'}, 'available_gpus': 0, 'job_name': 'sms-spam-classifier-mxnet-2022-04-14-15-28-01-172', 'user_requirements_file': None, 'channels': {'train': {'S3DistributionType': 'FullyReplicated', 'TrainingInputMode': 'File', 'RecordWrapperType': 'None'}, 'val': {'S3DistributionType': 'FullyReplicated', 'TrainingInputMode': 'File', 'RecordWrapperType': 'None'}}, 'channel_dirs': {'train': '/opt/ml/input/data/train', 'val': '/opt/ml/input/data/val'}, 'code_dir': '/opt/ml/code', 'input_dir': '/opt/ml/input', 'user_script_name': 'sms_spam_classifier_mxnet_script.py', 'output_data_dir': '/opt/ml/output/data/', 'input_config_dir': '/opt/ml/input/config'}\u001B[0m\n",
+      "\u001B[34mDownloading s3://smlambda-workshop-ccbd22/sms-spam-classifier/code/sms-spam-classifier-mxnet-2022-04-14-15-28-01-172/source/sourcedir.tar.gz to /tmp/script.tar.gz\u001B[0m\n",
+      "\u001B[34m2022-04-14 15:30:39,573 INFO - mxnet_container.train - Starting distributed training task\u001B[0m\n",
+      "\u001B[34mCollecting pandas\n",
+      "  Downloading https://files.pythonhosted.org/packages/74/24/0cdbf8907e1e3bc5a8da03345c23cbed7044330bb8f73bb12e711a640a00/pandas-0.24.2-cp35-cp35m-manylinux1_x86_64.whl (10.0MB)\u001B[0m\n",
+      "\u001B[34mRequirement already satisfied: numpy>=1.12.0 in /usr/local/lib/python3.5/dist-packages (from pandas) (1.14.6)\u001B[0m\n",
+      "\u001B[34mRequirement already satisfied: python-dateutil>=2.5.0 in /usr/local/lib/python3.5/dist-packages (from pandas) (2.7.4)\u001B[0m\n",
+      "\u001B[34mCollecting pytz>=2011k (from pandas)\u001B[0m\n",
+      "\u001B[34m  Downloading https://files.pythonhosted.org/packages/60/2e/dec1cc18c51b8df33c7c4d0a321b084cf38e1733b98f9d15018880fb4970/pytz-2022.1-py2.py3-none-any.whl (503kB)\u001B[0m\n",
+      "\u001B[34mRequirement already satisfied: six>=1.5 in /usr/local/lib/python3.5/dist-packages (from python-dateutil>=2.5.0->pandas) (1.11.0)\u001B[0m\n",
+      "\u001B[34mInstalling collected packages: pytz, pandas\u001B[0m\n",
+      "\u001B[34mSuccessfully installed pandas-0.24.2 pytz-2022.1\u001B[0m\n",
+      "\u001B[34mYou are using pip version 18.1, however version 20.3.4 is available.\u001B[0m\n",
+      "\u001B[34mYou should consider upgrading via the 'pip install --upgrade pip' command.\u001B[0m\n",
+      "\u001B[34m/usr/local/lib/python3.5/dist-packages/mxnet_container/train.py:190: DeprecationWarning: inspect.getargspec() is deprecated, use inspect.signature() instead\n",
+      "  train_args = inspect.getargspec(user_module.train)\u001B[0m\n",
+      "\u001B[34mTrain data path: /opt/ml/input/data/train\u001B[0m\n",
       "\n",
-      "2022-04-13 03:11:35 Uploading - Uploading generated training model\n",
-      "2022-04-13 03:12:15 Completed - Training job completed\n",
-      "Training seconds: 97\n",
-      "Billable seconds: 97\n"
+      "2022-04-14 15:30:55 Training - Training image download completed. Training in progress.\u001B[34mValidation data path: /opt/ml/input/data/val\u001B[0m\n",
+      "\u001B[34m[Epoch 0] Training: accuracy=0.732556\u001B[0m\n",
+      "\u001B[34m[Epoch 0] Validation: accuracy=0.775382\u001B[0m\n",
+      "\u001B[34m[Epoch 1] Training: accuracy=0.814898\u001B[0m\n",
+      "\u001B[34m[Epoch 1] Validation: accuracy=0.831986\u001B[0m\n",
+      "\u001B[34m[Epoch 2] Training: accuracy=0.853489\u001B[0m\n",
+      "\u001B[34m[Epoch 2] Validation: accuracy=0.843666\u001B[0m\n",
+      "\u001B[34m[Epoch 3] Training: accuracy=0.874355\u001B[0m\n",
+      "\u001B[34m[Epoch 3] Validation: accuracy=0.860737\u001B[0m\n",
+      "\u001B[34m[Epoch 4] Training: accuracy=0.890958\u001B[0m\n",
+      "\u001B[34m[Epoch 4] Validation: accuracy=0.873315\u001B[0m\n",
+      "\u001B[34m[Epoch 5] Training: accuracy=0.900606\u001B[0m\n",
+      "\u001B[34m[Epoch 5] Validation: accuracy=0.884996\u001B[0m\n",
+      "\u001B[34m[Epoch 6] Training: accuracy=0.907786\u001B[0m\n",
+      "\u001B[34m[Epoch 6] Validation: accuracy=0.903863\u001B[0m\n",
+      "\u001B[34m[Epoch 7] Training: accuracy=0.916760\u001B[0m\n",
+      "\u001B[34m[Epoch 7] Validation: accuracy=0.909254\u001B[0m\n",
+      "\u001B[34m[Epoch 8] Training: accuracy=0.922369\u001B[0m\n",
+      "\u001B[34m[Epoch 8] Validation: accuracy=0.899371\u001B[0m\n",
+      "\u001B[34m[Epoch 9] Training: accuracy=0.923716\u001B[0m\n",
+      "\u001B[34m[Epoch 9] Validation: accuracy=0.915544\u001B[0m\n",
+      "\u001B[34m[Epoch 10] Training: accuracy=0.927305\u001B[0m\n",
+      "\u001B[34m[Epoch 10] Validation: accuracy=0.917341\u001B[0m\n",
+      "\u001B[34m[Epoch 11] Training: accuracy=0.929549\u001B[0m\n",
+      "\u001B[34m[Epoch 11] Validation: accuracy=0.923630\u001B[0m\n",
+      "\u001B[34m[Epoch 12] Training: accuracy=0.934036\u001B[0m\n",
+      "\u001B[34m[Epoch 12] Validation: accuracy=0.924528\u001B[0m\n",
+      "\u001B[34m[Epoch 13] Training: accuracy=0.934261\u001B[0m\n",
+      "\u001B[34m[Epoch 13] Validation: accuracy=0.931716\u001B[0m\n",
+      "\u001B[34m[Epoch 14] Training: accuracy=0.938075\u001B[0m\n",
+      "\u001B[34m[Epoch 14] Validation: accuracy=0.929919\u001B[0m\n",
+      "\u001B[34m[Epoch 15] Training: accuracy=0.940319\u001B[0m\n",
+      "\u001B[34m[Epoch 15] Validation: accuracy=0.934412\u001B[0m\n",
+      "\u001B[34m[Epoch 16] Training: accuracy=0.938972\u001B[0m\n",
+      "\u001B[34m[Epoch 16] Validation: accuracy=0.926325\u001B[0m\n",
+      "\u001B[34m[Epoch 17] Training: accuracy=0.940543\u001B[0m\n",
+      "\u001B[34m[Epoch 17] Validation: accuracy=0.927224\u001B[0m\n",
+      "\u001B[34m[Epoch 18] Training: accuracy=0.942562\u001B[0m\n",
+      "\u001B[34m[Epoch 18] Validation: accuracy=0.938005\u001B[0m\n",
+      "\u001B[34m[Epoch 19] Training: accuracy=0.942338\u001B[0m\n",
+      "\u001B[34m[Epoch 19] Validation: accuracy=0.937107\u001B[0m\n",
+      "\n",
+      "2022-04-14 15:31:59 Uploading - Uploading generated training model\n",
+      "2022-04-14 15:31:59 Completed - Training job completed\n",
+      "Training seconds: 125\n",
+      "Billable seconds: 125\n"
      ]
     }
    ],
@@ -476,7 +476,7 @@
     "m = MXNet('sms_spam_classifier_mxnet_script.py',\n",
     "          role=role,\n",
     "          train_instance_count=1,\n",
-    "          train_instance_type='ml.c5.2xlarge',\n",
+    "          train_instance_type='ml.m4.xlarge',\n",
     "          output_path=output_path,\n",
     "          base_job_name='sms-spam-classifier-mxnet',\n",
     "          framework_version='1.2',\n",
@@ -517,13 +517,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----!"
+      "--------!"
      ]
     }
    ],
    "source": [
     "mxnet_pred = m.deploy(initial_instance_count=1,\n",
-    "                      instance_type='ml.m5.large')"
+    "                      instance_type='ml.m4.xlarge')"
    ]
   },
   {
@@ -544,7 +544,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predicted_label': [[1.0]], 'predicted_probability': [[0.9998794794082642]]}\n"
+      "{'predicted_label': [[1.0]], 'predicted_probability': [[0.9998121857643127]]}\n"
      ]
     }
    ],
